# SQLfb

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml  docker-cmake-multi-platform.yml  main.yml
builds/cmake/: BuildCommandCLI.txt  BuildFunctions.cmake  BuildICU.cmake  Configure.cmake
builds/install/misc/: firebird.conf
builds/win32/: make_boot.bat  preprocess.bat
builds/win32/msvc15/: common.vcxproj  common.vcxproj.filters  common_test.vcxproj  common_test.vcxproj.filters  engine_static.vcxproj  engine_static.vcxproj.filters
doc/sql.extensions/: README.blob_util.md  README.ddl.txt  README.name_resolution.md  README.packaged_temporary_tables.md  README.packages.txt  README.profiler.md
src/: CMakeLists.txt
src/auth/SecurityDatabase/: LegacyServer.cpp
src/burp/: backup.epp  burp.h  restore.epp
src/common/: DeindentedStr.h  ParserTokens.h  ThreadStart.h
src/common/classes/: vector.h
src/common/tests/: DeindentedStrTest.cpp
src/dsql/: DdlNodes.epp  DdlNodes.h  DsqlCompilerScratch.cpp  DsqlCompilerScratch.h  ExprNodes.cpp  ExprNodes.h  Nodes.h  PackageNodes.epp  PackageNodes.h  StmtNodes.cpp  StmtNodes.h  dsql.cpp  dsql.h  metd.epp  parse-conflicts.txt  parse.y  pass1.cpp
src/extlib/: UdfBackwardCompatibility.cpp
src/include/firebird/impl/: blr.h
src/include/firebird/impl/msg/: dyn.h  gbak.h  isql.h  jrd.h  sqlerr.h
src/isql/: FrontendParser.cpp  FrontendParser.h  extract.epp  isql.epp  show.epp
src/isql/tests/: FrontendParserTest.cpp
src/jrd/: BlobUtil.cpp  BulkInsert.cpp  BulkInsert.h  CacheVector.h  Monitoring.cpp  Monitoring.h  Package.epp  Package.h  RecordSourceNodes.cpp  Relation.cpp  Relation.h  Resources.cpp  Resources.h  Statement.cpp  SysFunction.cpp  SysFunction.h  SystemPackages.h  SystemTriggers.epp  TempSpace.cpp  WorkerAttachment.cpp  blb.cpp  blb.h  blp.h  build_no.h  constants.h  dfw.epp  dpm.epp  dpm_proto.h  drq.h  dyn.h  dyn_util.epp  exe.cpp  fields.h  grant.epp  ids.h  idx.cpp  idx.h  ini.epp  irq.h  jrd.h  (+15 more)
src/misc/: writeBuildNum.sh
src/plugins/profiler/: Profiler.cpp
src/remote/: CMakeLists.txt  remote.h
src/remote/client/: interface.cpp
src/utilities/install/: services.cpp
src/yvalve/: gds.cpp
